--- a/src/resources/views/layout.twig
+++ b/src/resources/views/layout.twig
@@ -6,19 +6,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
+        <link href="build/app.css" rel="stylesheet">
+        <link href="build/app.js" rel="stylesheet">
     </head>
     <body>
         <div class="container">
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                    <img src="{{ asset('build/images/logo.png') }}" width="64" height="64" alt="Expennies Logo" />
                     <span class="fs-1 fw-bold">Ex<span class="text-primary">pennies</span></span>
                 </a>
 
