--- a/src/resources/views/auth/login.twig
+++ b/src/resources/views/auth/login.twig
@@ -1,19 +1,9 @@
-{% extends 'layout.twig' %}
+{% extends 'auth/layout.twig' %}
 
-{% block stylesheets %}
-    {{ parent() }}
-    {{ encore_entry_link_tags('dashboard') }}
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    {{ encore_entry_script_tags('dashboard') }}
-{% endblock %}
-
-{% block title %}Dashboard{% endblock %}
+{% block title %}Log In{% endblock %}
 
 {% block content %}
-<section class="vh-100 bg-primary bg-gradient">
+    <section class="vh-100 bg-primary bg-gradient">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -21,17 +11,24 @@
                         <div class="card-body p-5 text-center">
                             <div class="mb-4">
                                 <h2 class="fw-bold mb-5 text-uppercase text-primary d-flex justify-content-center align-items-center">
-                                    <img src="" width="64" height="64"/>
                                     Login
                                 </h2>
                                 <form method="post" action="/login">
                                     <div class="form-outline form-white mb-4">
-                                        <input type="email" class="form-control form-control-lg" placeholder="Email"
+                                        <input type="email" name="email" class="form-control form-control-lg {{ errors.email ? 'is-invalid' : '' }}"
+                                               value="{{ old.email }}"
+                                               placeholder="Email"
                                                required />
+                                        <div class="invalid-feedback">
+                                            {{ errors.email | first }}
+                                        </div>
                                     </div>
                                     <div class="form-outline form-white mb-1">
-                                        <input type="password" class="form-control form-control-lg"
+                                        <input type="password" name="password" class="form-control form-control-lg {{ errors.password ? 'is-invalid' : '' }}"
                                                placeholder="Password" required />
+                                        <div class="invalid-feedback">
+                                            {{ errors.password | first }}
+                                        </div>
                                     </div>
                                     <p class="mb-4 text-end"><a class="text-secondary fw-semibold" href="#">Forgot
                                             password?</a></p>
@@ -51,4 +48,4 @@
             </div>
         </div>
     </section>
-    {% endblock %}
+{% endblock %}
