refactor login, created UserProviderService

--- a/src/resources/views/layout.twig
+++ b/src/resources/views/layout.twig
@@ -6,8 +6,11 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-        <link href="build/app.css" rel="stylesheet">
-        <link href="build/app.js" rel="stylesheet">
+        <link href="build/app.928f41ca.css" rel="stylesheet">
+        <link href="/build/dashboard.894c72dd.css" rel="stylesheet">
+        <script src="build/app.8f3d2ac4.js" type="application/javascript"></script>
+        <script src="/build/dashboard.44232ef3.js" type="application/javascript"></script>
+
     </head>
     <body>
         <div class="container">
@@ -27,7 +30,6 @@
                         <a href="#" class="nav-link fw-bold fs-5" aria-current="page">Categories</a>
                     </li>
                 </ul>
-
                 <div class="dropdown user-dropdown-menu">
                     <a href="#" class="h5 text-decoration-none" id="userDropDownMenu" data-bs-toggle="dropdown"
                        aria-expanded="false">
