--- a/src/resources/css/app.scss
+++ b/src/resources/css/app.scss
@@ -1,5 +1,4 @@
-$primary: #018efc;
-
+@import "./variables.scss";
 @import "~bootstrap/scss/bootstrap";
 
 * {
@@ -10,6 +9,24 @@ body {
   background-color: #e7ebee;
 }
 
+svg.icon {
+  width: 30px;
+  height: 30px;
+}
+
+.nav-link {
+  color: #9aa0a9;
+
+  &.active {
+    background-color: inherit !important;
+    color: #57585a !important;
+  }
+
+  &:hover,
+  &:focus {
+    color: #57585a !important;
+  }
+}
 .nav-link {
   color: #9aa0a9;
 
