Category crud implemented

--- a/src/resources/views/layout.twig
+++ b/src/resources/views/layout.twig
@@ -6,11 +6,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-        <link href="build/app.928f41ca.css" rel="stylesheet">
-        <link href="/build/dashboard.894c72dd.css" rel="stylesheet">
-        <script src="build/app.8f3d2ac4.js" type="application/javascript"></script>
-        <script src="/build/dashboard.44232ef3.js" type="application/javascript"></script>
+{% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+        {% endblock %}
 
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
+        {% endblock %}
     </head>
     <body>
         <div class="container">
@@ -38,6 +40,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round"
                                   d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z" />
                         </svg>
+                        <span>{{ auth.name}}</span>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="userDropDownMenu">
                         <li>
