--- a/src/resources/views/auth/layout.twig
+++ b/src/resources/views/auth/layout.twig
@@ -6,8 +6,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-        <link href="build/app.928f41ca.css" rel="stylesheet">
-        <script src="build/app.8f3d2ac4.js" type="application/javascript"></script>
+        <link href="build/app.css" rel="stylesheet">
+        <script src="build/app.js" type="application/javascript"></script>
     </head>
     <body>
         {% block content %}{% endblock %}
