--- a/src/resources/views/categories/index.twig
+++ b/src/resources/views/categories/index.twig
@@ -8,6 +8,40 @@
 {% block title %}Categories{% endblock %}
 
 {% block content %}
+<script>
+window.addEventListener("DOMContentLoaded", function () {
+    const editCategoryModal = new bootstrap.Modal(document.getElementById('editCategoryModal'));
+    document.querySelectorAll(".edit-category-btn").forEach((button) => {
+        button.addEventListener("click", function (event) {
+            const categoryId = event.currentTarget.getAttribute("data-id");
+            fetch(`/categories/${categoryId}`)
+            .then((response) => response.json())
+            .then((response) => openEditCategoryModal(editCategoryModal, response));
+        });
+    });
+
+    document
+    .querySelector(".save-category-btn")
+    .addEventListener("click", function (event) {
+        const categoryId = event.currentTarget.getAttribute("data-id");
+
+        // TODO: Post update to the category
+        console.log(categoryId);
+        });
+    });
+
+function openEditCategoryModal(modal, { id, name }) {
+  const nameInput = modal._element.querySelector('input[name="name"]');
+
+  nameInput.value = name;
+
+  modal._element
+    .querySelector(".save-category-btn")
+    .setAttribute("data-id", id);
+
+  modal.show();
+}
+</script>
     <div class="categories container content-body">
         <div class="text-end">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newCategoryModal">
@@ -45,6 +79,7 @@
                 </form>
             </div>
         </div>
+        {% include 'categories/edit_category_modal.twig' %}
         {% if categories %}
             <div id="categoriesTable">
                 <table class="table table-striped">
