--- a/src/resources/views/categories/index.twig
+++ b/src/resources/views/categories/index.twig
@@ -15,9 +15,9 @@ window.addEventListener("DOMContentLoaded", function () {
     document.querySelectorAll(".edit-category-btn").forEach((button) => {
         button.addEventListener("click", function (event) {
             const categoryId = event.currentTarget.getAttribute("data-id");
-            fetch(`/categories/${categoryId}`)
-            .then((response) => response.json())
-            .then((response) => openEditCategoryModal(editCategoryModal, response));
+            get(`/categories/${ categoryId }`)
+                .then(response => response.json())
+                .then(response => openEditCategoryModal(editCategoryModal, response))
         });
     });
 
@@ -26,21 +26,25 @@ window.addEventListener("DOMContentLoaded", function () {
     .addEventListener("click", function (event) {
         const categoryId = event.currentTarget.getAttribute("data-id");
  
+        post(`/categories/${ categoryId }`, {
+            name: editCategoryModal._element.querySelector('input[name="name"]').value
+        }, editCategoryModal._element).then(response => {
+            if (response.ok) {
+                editCategoryModal.hide()
+            }
+        })
 
-        // TODO: Post update to the category
-        fetch(`/categories/${categoryId}`, {
-            method: 'POST',
-            body: JSON.stringify({
-                name: editCategoryModal._element.querySelector('input[name="name"]').value,
-                ...getCsrfFields()
-              }),
-            headers:{
-                'Content-Type': 'application/json',
-                'X-Requested-With': 'XMLHttpRequest'
-              }
-          })
-        .then((response) => (response.text())).then((response) => console.log(response));
         });
+
+    document.querySelectorAll(".delete-category-btn").forEach((button) => {
+        button.addEventListener("click", function (event) {
+            const categoryId = event.currentTarget.getAttribute("data-id");
+        if (confirm('Are you sure you want to delete this category?')) {
+            del(`/categories/${ categoryId }`)
+        }
+        });
+    });
+
     });
 
 function getCsrfFields() {
@@ -127,13 +131,10 @@ function openEditCategoryModal(modal, { id, name }) {
                                 <td>{{ category.updatedAt | date('m/d/Y g:i A') }}</td>
                                 <td>
                                     <div class="d-flex flex-">
-                                        <form action="/categories/{{ category.id }}" method="post">
-                                            {{ csrf.fields | raw }}
-                                            <input type="hidden" name="_METHOD" value="DELETE" />
-                                            <button type="submit" class="btn btn-outline-primary">
-                                                <i class="bi bi-trash3-fill"></i>
-                                            </button>
-                                        </form>
+                                      <button class="ms-2 btn btn-outline-primary delete-category-btn"
+                                                data-id="{{ category.id }}">
+                                            <i class="bi bi-trash3-fill"></i>
+                                        </button>
                                         <button class="ms-2 btn btn-outline-primary edit-category-btn"
                                                 data-id="{{ category.id }}">
                                             <i class="bi bi-pencil-fill"></i>
