--- a/src/resources/css/app.scss
+++ b/src/resources/css/app.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 @import "~bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons";
-@import "~datatables.net-dt/css/jquery.dataTables.css";
+@import "~datatables.net-dt/css/dataTables.dataTables.css";
 
 * {
   font-family: "Roboto", sans-serif !important;
