--- a/src/resources/views/categories/index.twig
+++ b/src/resources/views/categories/index.twig
@@ -8,74 +8,8 @@
 {% block title %}Categories{% endblock %}
 
 {% block content %}
-<script src="/build/ajax.js"></script>
-<script>
-window.addEventListener("DOMContentLoaded", function () {
-    const editCategoryModal = new bootstrap.Modal(document.getElementById('editCategoryModal'));
-    document.querySelectorAll(".edit-category-btn").forEach((button) => {
-        button.addEventListener("click", function (event) {
-            const categoryId = event.currentTarget.getAttribute("data-id");
-            get(`/categories/${ categoryId }`)
-                .then(response => response.json())
-                .then(response => openEditCategoryModal(editCategoryModal, response))
-        });
-    });
-
-    document
-    .querySelector(".save-category-btn")
-    .addEventListener("click", function (event) {
-        const categoryId = event.currentTarget.getAttribute("data-id");
- 
-        post(`/categories/${ categoryId }`, {
-            name: editCategoryModal._element.querySelector('input[name="name"]').value
-        }, editCategoryModal._element).then(response => {
-            if (response.ok) {
-                editCategoryModal.hide()
-            }
-        })
-
-        });
-
-    document.querySelectorAll(".delete-category-btn").forEach((button) => {
-        button.addEventListener("click", function (event) {
-            const categoryId = event.currentTarget.getAttribute("data-id");
-            if (confirm('Are you sure you want to delete this category?')) {
-                del(`/categories/${ categoryId }`)
-            }
-        });
-    });
-
-    });
-
-function getCsrfFields() {
-  const csrfNameField = document.querySelector("#csrf_name");
-  const csrfValueField = document.querySelector("#csrf_value");
-  const csrfNameKey = csrfNameField.getAttribute('name');
-  const csrfName = csrfNameField.content;
-
-  const csrfValueKey = csrfValueField.getAttribute('name');
-  const csrfValue = csrfValueField.content;
-
-  return {
-    [csrfNameKey]: csrfName,
-    [csrfValueKey]: csrfValue
-    };
-}
-
-function openEditCategoryModal(modal, { id, name }) {
-  const nameInput = modal._element.querySelector('input[name="name"]');
-
-  nameInput.value = name;
-
-  modal._element
-    .querySelector(".save-category-btn")
-    .setAttribute("data-id", id);
-
-  modal.show();
-}
-</script>
     <div class="categories container content-body">
-        <div class="text-end">
+        <div class="text-end mb-4">
             <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newCategoryModal">
                 <i class="bi bi-plus-circle me-1"></i>
                 New Category
